--- a/config/config-local.yaml
+++ b/config/config-local.yaml
@@ -1,7 +1,7 @@
 log:
   Level: info
   Format: json #  text is another value supported
-  Output: file # stdout is another value
+  Output: stdout # stdout is another value
   File:
     Filename: "airdb.log"
     MaxSize: 4024
