Added code to start grpc server

--- a/config/config-local.yaml
+++ b/config/config-local.yaml
@@ -1,10 +1,19 @@
 log:
   Level: info
   Format: json #  text is another value supported
-  Output: file # stdout is another value
+  Output: stdout # stdout is another value
   File:
     Filename: "airdb.log"
     MaxSize: 4024
     Compress: true
     MaxBackups: 5
     MaxAge: 5
+
+grpc:
+  port: 50051
+
+
+dbOptions:
+  dbPath: "/home/sohanvir/softwares/go/src/github.com/dailyhunt/airdb/adb"
+
+
